--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
   "scripts": {
     "start": "node ./src/index.js",
     "dev": "nodemon ./src/index.js",
-    "lint": "npx eslint ./src"
+    "lint": "npx eslint ./src",
+    "db:create": "npx sequelize-cli db:create",
+    "db:create:model": "npx sequelize-cli model:generate --name",
+    "db:migrate": "npx sequelize-cli db:migrate",
+    "db:migrate:undo": "npx sequelize-cli db:migrate:undo",
+    "db:seed:generate": "npx sequelize-cli seed:generate --name",
+    "db:seed": "npx sequelize-cli db:seed:all",
+    "db:seed:undo": "npx sequelize-cli db:seed:undo:all"
   },
   "dependencies": {
     "@google-cloud/storage": "^7.11.0",
@@ -22,9 +29,11 @@
     "jest": "^29.7.0",
     "joi": "^17.13.1",
     "joi-password": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
+    "passport-google-token": "^0.1.2",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
