--- a/package.json
+++ b/package.json
@@ -20,20 +20,18 @@
   "dependencies": {
     "@google-cloud/storage": "^7.11.0",
     "@joi/date": "^2.1.1",
-    "bcrypt": "^5.1.1",
     "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "eslint": "^9.2.0",
     "express": "^4.19.2",
+    "google-auth-library": "^9.10.0",
     "jest": "^29.7.0",
     "joi": "^17.13.1",
     "joi-password": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
-    "passport": "^0.7.0",
-    "passport-google-token": "^0.1.2",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
