--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "db:migrate:undo": "npx sequelize-cli db:migrate:undo",
     "db:seed:generate": "npx sequelize-cli seed:generate --name",
     "db:seed": "npx sequelize-cli db:seed:all",
-    "db:seed:undo": "npx sequelize-cli db:seed:undo:all"
+    "db:seed:undo": "npx sequelize-cli db:seed:undo:all",
+    "db:migrate:generate": "npx sequelize-cli migration:generate"
   },
   "dependencies": {
     "@google-cloud/storage": "^7.11.0",
