--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@google-cloud/storage": "^7.11.0",
     "@joi/date": "^2.1.1",
+    "axios": "^1.7.2",
     "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -37,6 +38,7 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
     "uuid": "^9.0.1",
+    "validator": "^13.12.0",
     "winston": "^3.13.0"
   },
   "devDependencies": {
